--- a/E-BookApp/pubspec.yaml
+++ b/E-BookApp/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+ sdk: '>=2.12.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   percent_indicator: 4.2.2
+  json_serializable: ^6.3.1
   flutter:
     sdk: flutter
 
@@ -36,10 +37,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
+  bloc: ^8.0.3
+  flutter_bloc: ^8.0.1
+  conditional_builder_null_safety: ^0.0.6
+  dio: ^4.0.6
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.2.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -60,23 +66,20 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/8cbe08ed5efc6a3efa5cafe1be45104e.gif
-   - assets/2fabf3ceb5a35b51a70e27137d56e4d2.gif
-   - assets/image_processing20200810-29265-bud3le.gif
-   - assets/w_cufsono_016.gif
-   - assets/72GX.gif
-   - assets/linum-gif.gif
-   - assets/original-7b7e7381eecf1bb5fda9036d205d6ed0.jpg
-   - assets/original-fc277b7e84dcb94f3e31dc57e6e6f4c9.jpg
-   - assets/Screenshot 2022-07-18 184542.png
+
+
+
+
+   - assets/516e6a98c13a730c73117b83e381ab51.jpg
+   - assets/fa691691526776c99476dc53a2b3d486.png
+   - assets/235626e27bb28fb7b0218bf88bc3f276.png
+
    - assets/photo_2022-07-19_12-23-08.jpg
-   - assets/30afbd78837845.5cb056e2c2a0a.gif
+   - assets/original-4186a286645b53d39a7d9df81ff042ed.jpg
    - assets/untitled-nhg-01_4x.jpg
-   - assets/008f2ec9b01f0b3556622bd82a44abe6.jpg
+
    - assets/040828259b15aa838bfc68b664051db0.jpg
-   - assets/17e56a9e3a12aa55c1732cefa29d0355.jpeg
-   - assets/2b524838094f3ba96d312f477f8d07fe.png
-   - assets/image_processing20210521-10039-1hqtcbf.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
